<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Foodlidays</string>
    <string name="request_email">Enter your email</string>
    <string name="request_room">Enter your room\'s ID</string>
    <string name="qr_code">QR Code</string>
    <string name="need_two_field">You must fill both fields</string>
    <string name="email_invalid">Invalid email</string>
    <string name="bad_room_nuber">Wrong room number</string>
    <string name="signed_in">Connected</string>
    <string name="qr_code_failed">Error while reading QR code</string>
    <string name="cancel_action">Cancel</string>
    <string name="ok_action">Validate</string>
    <string name="email_valid_required">A valid email is required</string>
    <string name="or_use_qr">Or use QR code scanner\n to fill it</string>
    <string name="sign">Sign in</string>
    <string name="empty_card">Your card is empty ! </string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="display_id_chambre">Room\'s ID :</string>
    <string name="display_email">Your email :</string>
    <string name="dispaly_room_location">Room\'s location :</string>
    <string name="nd_floor_room">e foor,  room</string>
    <string name="card">Shopping cart</string>
    <string name="menu">Menu</string>
    <string name="any_restaurant">Sorry, we didn\'t find any restaurant open right now in your area …</string>
    <string name="title_activity_start">Start</string>
    <string name="no_connection">No internet connexion available</string>
    <string name="connect_to_internet">Internet connexion is required</string>
    <string name="profil">Profil</string>
    <string name="category">Category :</string>
    <string name="name_dish">Name of the dish</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="total_order">Total to pay :</string>
    <string name="ordering">Ordering</string>
    <string name="any_order">No current command</string>
    <string name="number">Number</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="your_orders">Your orders : </string>
    <string name="cash">Cash</string>
    <string name="card_bank">Card</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="access_order">Access the status of your order here !</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="payment_method">Method of payment</string>
    <string name="confirm">Are you sure ?</string>
    <string name="delete_card">Delete the card</string>
    <string name="error_network">Error network access, please try again later</string>
    <string name="added_cart">added to cart !</string>
    <string name="order_pending">Pending</string>
    <string name="order_processed">Processed</string>
    <string name="order_delivered">Delivered</string>
    <string name="order_canceled">Canceled</string>
    <string name="error_order">An error occured during the creation of the order, please try again later</string>
    <string name="last">Last</string>
    <string name="reloaded">refreshed</string>
    <string name="sub_total">Sub total :</string>
    <string name="manag_fee">Management fee :</string>
    <string name="dislay_place_location">Place\'s location :</string>
    <string name="signed_out">Signed out</string>
</resources>
