<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:id="@+id/order_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/name_dish"
            android:layout_weight="1"
            android:id="@+id/order_nom_plat"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_weight="0"
            android:text="@string/price"
            android:id="@+id/order_prix_pc"
            android:textSize="14sp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:text="@string/quantity"
            android:gravity="center"
            android:layout_weight="0"
            android:id="@+id/order_quantity"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="0"
            android:text="@string/total"
            android:id="@+id/order_prix_st"
            android:textSize="14sp"/>

</LinearLayout>